[package]
name = "rtasks"
version = "0.1.0"
authors = ["Tercio de Melo <terciodemelo@gmail.com>"]
edition = "2018"

[dependencies]
termion = "1"
uuid = {version = "0.7", features = ["v4"]}
dirs = "1.0"
chrono = { version= "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"